@@ -470,3 +470,4 @@ Views 3.x-7.x-dev
     o #833790: Click sort could break on fields that were actually formulas.
     o #963454 by dereine: Remove related terms data definitions.
     o #976098 by dereine: Fix notice in field field handler render function.
+    o #626732 by dereine: Fix analyze ok-button and added a test for it.
